[gd_scene load_steps=8 format=3 uid="uid://dbogdtpyg60jm"]

[ext_resource type="Texture2D" uid="uid://bma0o6xbkmlg0" path="res://graphics/ui/bullet.png" id="1_407pe"]
[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_ovfm0"]
[ext_resource type="Theme" uid="uid://b1d2fxqapg7h" path="res://scenes/UI/new_theme.tres" id="2_0on5k"]
[ext_resource type="Texture2D" uid="uid://cgmjknqths285" path="res://graphics/ui/grenade.png" id="2_xeqyk"]
[ext_resource type="Texture2D" uid="uid://khomwheu202" path="res://graphics/ui/progress_bar/bg.png" id="3_6x0fk"]
[ext_resource type="Texture2D" uid="uid://b05fu177alkjo" path="res://graphics/ui/progress_bar/over.png" id="4_qltpr"]
[ext_resource type="Texture2D" uid="uid://cglf0somh1epm" path="res://graphics/ui/progress_bar/progress.png" id="5_pj8ae"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ovfm0")

[node name="LaserPointer" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.01
anchor_top = 0.878
anchor_right = 0.043
anchor_bottom = 0.983
offset_left = -3.52
offset_top = 0.0559692
offset_right = 0.463997
offset_bottom = 37.016
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LaserPointer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="LaserPointer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0on5k")
text = "21"
horizontal_alignment = 1

[node name="Ammo_pic" type="TextureRect" parent="LaserPointer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_407pe")
expand_mode = 4

[node name="GrenadePointer" type="Control" parent="."]
layout_direction = 2
layout_mode = 3
anchor_left = 0.055
anchor_top = 0.877
anchor_right = 0.089
anchor_bottom = 0.997
offset_left = 0.639999
offset_top = 1.70404
offset_right = 0.472
offset_bottom = -0.0560303
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GrenadePointer"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 67.0

[node name="Label" type="Label" parent="GrenadePointer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0on5k")
text = "12"
horizontal_alignment = 1

[node name="grenade_pic" type="TextureRect" parent="GrenadePointer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_xeqyk")
expand_mode = 4

[node name="Health_bar" type="TextureProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
texture_under = ExtResource("3_6x0fk")
texture_over = ExtResource("4_qltpr")
texture_progress = ExtResource("5_pj8ae")
